# LLMsWerewolves

./: .gitignore  LICENSE  README.md  instructions.json  log.md  log.txt  main.py  player_info.json  pyproject.toml  requirements.txt  run_webui.py  webui.py  webui.txt  启动webui.bat  裁判提示词.md  规则.md
config/: api_template.json  default_instructions.json  instructions.json  player_info.json
core/: __init__.py  context.py  game.py  general.py  init.py  player.py  tools.py
log/: 1.md  11.md  123.md  bur.md  不许有bug.md  全自动1.md  全自动吗！！.md  测试.md  测试1.md  狼人杀游戏1.md  这下是真的全自动了没有bug了.md
web_ui/: shared.py
web_ui/bridge/: web_game.py  web_player.py
web_ui/common/: components.py  layout.py  state.py
web_ui/pages/: config_page.py  manual_page.py
